gitops/bootstrap/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.skyfirstlabs.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.skyfirstlabs.com/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email"
    nginx.ingress.kubernetes.io/auth-snippet: |
      location = /api/webhook {
          auth_request off;
      }
    # nginx.ingress.kubernetes.io/whitelist-source-range: "81.84.211.111/32,169.155.237.0/24"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd.skyfirstlabs.com
    secretName: argocd-server-tls
  rules:
  - host: argocd.skyfirstlabs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
